--- a/examples/determinant-rank1-perturbation.tex
+++ b/examples/determinant-rank1-perturbation.tex
@@ -8,6 +8,7 @@
 \usepackage{enumitem}
 \usepackage{geometry}
 \geometry{margin=1in}
+\usepackage{hyperref}
 
 % === Theorem Environments ===
 \theoremstyle{plain}
@@ -41,7 +42,7 @@ Let $M$ be an invertible $n \times n$ matrix and let $u, v \in \mathbb{R}^n$ be 
 \]
 \end{theorem}
 
-\noindent This is a special case of the Sylvester determinant identity; see Horn \& Johnson, \textit{Matrix Analysis}, 2nd ed., Theorem 1.3.22.
+\noindent This is a special case of the Sylvester determinant identity; see Horn and Johnson~\cite{HornJohnson2012}, Section 0.8.5, Equation (0.8.5.11).
 
 \section*{Main Result}
 
@@ -128,5 +129,13 @@ Let $A$ denote the matrix whose determinant is $d_n$, so $A_{ij} = 1 + a_i \delt
     \end{proofsteps}
 \end{proofsteps}
 \end{proof}
+
+\begin{thebibliography}{9}
+\bibitem{HornJohnson2012}
+R.~A. Horn and C.~R. Johnson,
+\textit{Matrix Analysis}, 2nd ed.,
+Cambridge University Press, 2012.
+\href{https://doi.org/10.1017/CBO9781139020411}{DOI: 10.1017/CBO9781139020411}
+\end{thebibliography}
 
 \end{document}
